# feature_tracking

./: CMakeLists.txt  README.md  package.xml
feature_tracking/: README.md  package.xml
feature_tracking_core/: CMakeLists.txt  README.md  package.xml
feature_tracking_core/include/feature_tracking_core/: stereo_tracker.h  stereo_tracker_libviso.h  tracker_libviso.h  utilities.h
feature_tracking_core/src/: stereo_tracker_libviso.cpp  tracker_libviso.cpp  utilities.cpp
image_preproc_ros_tool/: package.xml
image_preproc_ros_tool/src/disp2pointcloud/: disp2pointcloud.hpp
image_preproc_ros_tool/src/gamma_correction/: gamma_correction.h  gamma_correction_nodelet.cpp
image_preproc_ros_tool/src/resize/: resize.cpp  resize.h  resize_nodelet.cpp
include/feature_tracking/: tracker_libviso.h  tracklet.h  visualization.h
matches_msg_ros/: CMakeLists.txt  README.md  package.xml
matches_msg_ros/msg/: FeaturePoint.msg  MatchesMsg.msg  MatchesMsgWithInlierFlag.msg  Tracklet.msg  TrackletWithInlierFlag.msg
src/: stereo_tracker.cpp  tracker_libviso.cpp  tracklet.cpp  visualization.cpp
viso_feature_tracking_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
viso_feature_tracking_ros_tool/cfg/: FeatureTrackingContourRoi.rosif
viso_feature_tracking_ros_tool/launch/: 1_cam.launch  5_cams.launch  feature_tracking_contour_roi_node.launch  feature_tracking_contour_roi_nodelet.launch
viso_feature_tracking_ros_tool/res/: svfs_front_left.yaml  svfs_front_right.yaml  svfs_left.yaml  svfs_rear.yaml  svfs_right.yaml  viso_feature_tracking_mono.yaml
viso_feature_tracking_ros_tool/src/commons/: commons.hpp
viso_feature_tracking_ros_tool/src/feature_tracking_contour_roi/: feature_tracking_contour_roi.cpp  feature_tracking_contour_roi.hpp  feature_tracking_contour_roi_node.cpp  feature_tracking_contour_roi_nodelet.cpp
viso_feature_tracking_ros_tool/src/viso_feature_tracking_node/: viso_feature_tracking_interface.cpp  viso_feature_tracking_interface.h  viso_feature_tracking_node.cpp  viso_feature_tracking_nodelet.cpp  viso_feature_tracking_parameters.cpp  viso_feature_tracking_parameters.h
