<?xml version="1.0"?>
<package format="2">
  <name>feature_tracking</name>
  <version>1.6.0</version>
  <description>Meta-package for feature_tracking library.</description>
  <maintainer email="johannes.graeter@kit.edu">Johannes Gräter</maintainer>
  <license>GPLv3</license>
  <url type="repository">http://github.com/KIT-MRT/feature_tracking</url>
  <author email="eike.rehder@kit.edu">Eike Rehder</author>
  <author email="johannes.graeter@kit.edu">Johannes Gräter</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>feature_tracking_core</exec_depend>
  <exec_depend>viso_feature_tracking_ros_tool</exec_depend>
  <exec_depend>matches_msg_ros</exec_depend>
  <export>
    <metapackage />
  </export>
</package>