<package format="2">
  <name>viso_feature_tracking_ros_tool</name>
  <version>0.0.0</version>
  <description>Ros tool for feature tracking with libviso2 features.</description>

  <license>GPLv3</license>
  <maintainer email="johannes.graeter@kit.edu">Johannes Graeter</maintainer>
  <author email="johannes.graeter@kit.edu">Johannes Graeter</author>
  <url type="repository">http://github.com/KIT-MRT/feature_tracking</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  
  <build_depend>roscpp</build_depend>
  <!-- <build_depend>rospy</build_depend> Use this instead of roscpp  when writing a python node -->
  <depend>roslib</depend>
  <depend>nodelet</depend>
  <depend>feature_tracking_core</depend>
  <depend>matches_msg_ros</depend>
  <depend>cv_bridge</depend>
  <depend>mrt_opencv</depend>
  <depend>yaml-cpp</depend>
  <depend>opencv_apps</depend>
  <depend>message_filters</depend>

  <depend>dynamic_reconfigure</depend>
  <depend>rosinterface_handler</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" /><!-- Other tools can request additional information be placed here -->
  </export>
</package>
